# fcpp_bridge

./: .gitignore  NOTICE.md  PROJECT_STATUS.md  README.md  SESSION_COMPLETE_MAY30.md  fcpp_bridge.yaml  pyproject.toml
fcpp_bridge/: .gitignore  DEPLOYMENT.md  DSL_GUIDE.md  README.md  TUTORIAL_in_depth.md  TUTORIAL_simple.md  __init__.py  log.py  provided_prompt.txt
fcpp_bridge/claude_code/: .update-memory.md  MEMORY.md
fcpp_bridge/compiler/: __init__.py  cmake_generator.py  compilation_diagnostic.py  compilation_error.py  compilation_error_parser.py  compilation_result.py  compiler_core.py  program_cache.py
fcpp_bridge/config/: __init__.py  _loader.py  bridge_config.py
fcpp_bridge/development_history/: EXAMPLES_JOURNAL.md  EXAMPLES_PLAN.md  FUTURE_EXERCISES.md  NETWORK_REFACTOR_JOURNAL.md  OPEN_QUESTIONS_V2_PLAN.md  PHASE1_COMPLETION_SUMMARY.md  PHYSICAL_DEPLOYMENT.md  PHYSICAL_DEPLOYMENT_JOURNAL.md  PRE_V19_REFACTORING.md  PRIMITIVE_AUDIT.md  README_merge_and_fcpp_include_fix.md  REFACTOR_TESTS_JOURNAL.md  SESSION_2026-05-29_TRANSPILER_ANALYSIS_SUMMARY.md  SESSION_2026-05-30_PHASE1_IMPLEMENTATION.md  SESSION_2026-05-30_PHASE2_PHASE3_IMPLEMENTATION.md  SESSION_2026-05-30_PHASE4_7_IMPLEMENTATION.md  SESSION_2026-05-30_PHASE8_IMPLEMENTATION.md  SESSION_2026-05-30_PHASE8b_CPP14_CPP26.md  (+24 more)
fcpp_exercises_backup/: chain_decaying.cpp  chain_decaying.hpp  es_01.cpp  es_01.hpp  es_basics.cpp  exercises.cpp  exercises_1_mountains_peaks.cpp  exercises_3.cpp  exercises_4.cpp  exercises_old_phd_1.cpp  random_bounce.hpp  scattered_database.cpp  shared.hpp  storage_init.hpp
(+235 files in other folders)
